@@ -475,16 +475,16 @@ table.wikitable {
 	border-collapse: collapse;
 	color: black;
 }
-.wikitable th,
-.wikitable td {
+table.wikitable > tr > th,
+table.wikitable > tr > td {
 	border: 1px #aaa solid;
 	padding: 0.2em;
 }
-.wikitable th {
+table.wikitable > tr > th {
 	background-color: #f2f2f2;
 	text-align: center;
 }
-.wikitable caption {
+table.wikitable > caption {
 	font-weight: bold;
 }
 
